[package]
name = "hello_world"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.7", features = ["http2", "macros"] }
axum-core = "0.4.5"
serde = { version = "1.0.215", features = ["derive"] }
tokio = { version = "1.41.1", features = ["macros", "rt-multi-thread"] }

tower-http = { version = "0.6.1", features = ["cors"] }

